[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "darkbot"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "aiogoogletrans==3.3.3",
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "async-timeout==4.0.3",
    "asyncurban==0.3.3",
    "attrs==23.2.0",
    "bitlyshortener==0.6.4",
    "cachetools==5.3.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "discord.py==2.6.4",
    "distro==1.9.0",
    "exceptiongroup==1.1.3",
    "forex-python==1.8",
    "frozenlist==1.4.1",
    "h11==0.12.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==0.15.0",
    "httpx==0.23.0",
    "hyperframe==6.0.1",
    "idna==3.7",
    "ipinfo==4.4.3",
    "jiter==0.5.0",
    "multidict==6.0.5",
    "openai==1.43.0",
    "psutil==5.9.6",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "PyNaCl==1.6.1",
    "pyodbc==5.1.0",
    "python-dotenv==0.19.1",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "redis==5.0.1",
    "rfc3986==1.5.0",
    "setuptools>=69,<81",
    "simplejson==3.19.2",
    "sniffio==1.3.0",
    "strgen==1.3.1",
    "tqdm==4.66.5",
    "typing_extensions==4.12.2",
    "urllib3==2.2.2",
    "wavelink==3.4.1",
    "yarl==1.9.4",
]

[project.optional-dependencies]
dev = [
    "aioresponses",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "ASYNC"]
ignore = [
    "E501",    # Existing long lines are not behaviorally relevant to the baseline.
    "E722",    # Phase 5 narrows bare exception handlers.
    "B904",    # Phase 5 owns exception-chain cleanup.
    "SIM117",  # Phase 4 replaces per-call HTTP sessions.
    "ASYNC210",# Phase 4 removes blocking HTTP calls from async commands.
    "E402",    # Legacy script path bootstrap keeps imports below path setup.
    "E741",    # Legacy color helper naming is left untouched in this phase.
    "S101",    # Tests use assert.
    "S105",    # Existing config/default placeholders are not secrets.
    "S106",    # Existing config/default placeholders are not secrets.
    "S107",    # Existing config/default placeholders are not secrets.
    "S110",    # Phase 5 handles swallowed exceptions.
    "S314",    # XML parser hardening is outside the tooling baseline.
    "S311",    # Existing non-crypto random use is user-facing utility behavior.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venvPath = "."
venv = "venv"
typeCheckingMode = "basic"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportAssignmentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportDeprecated = "none"
reportUnknownArgumentType = "none"
reportUnsupportedDunderAll = "none"
reportUnnecessaryComparison = "none"
reportOperatorIssue = "none"
reportOptionalOperand = "none"
reportGeneralTypeIssues = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
